Changes
=======

Next
------------------

Bug fixes:

- Local loggers have all been changed to `getLogger(__name__)` in rasterio.rio
  module (#1328).

1.0b4 (2018-06-23)
------------------

Bug fixes:

- We now raise an exception when WarpedVRT is asked to add an alpha band and
  one already exists for the VRT.

1.0b3 (2018-06-21)
------------------

Bug fixes:

- The warp memory limit configuration available in gdalwarp has been added
  to `reproject()` and `WarpedVRT`.
- Avoid boundless reads when sampling pixels outside a dataset's extent
  (#1249).
- The logic behind rio-warp's --target-aligned-pixels has been factored into
  a new `aligned_target()` function in the warp module to help resolve 
  #853.
- A regression in the VSI path of some zip:// URLs has been fixed (#1377).
- Transform, coordinate reference system, and ground control points are
  properly set when opening a dataset in w+ mode (#1359.

1.0b2 (2018-06-19)
------------------

Breaking changes:

- `boundless=True` reads from warped VRTs are disallowed. Instead, VRTs should
  be constructed so that only data bounded by their extents is read. In
  exchange, boundless reads for non-VRT datasets are faster and more robust.

Upcoming deprecations:

- Comparison of CRS objects to str or dict is deprecated.

New features:

- Added `out`, `out_shape`, `window`, `resampling` keyword parameters to
  the `dataset_mask` method (#1298).
- CRS.from_string can now take WKT strings as input.

Bug fixes:

- Tests have been added to confirm that reading from a WarpedVRT will use the
  source dataset's masks and overviews.
- Expectations of warp tests that use resampling algorithms other than nearest
  neighbor have been corrected.
- WarpedVRT.crs now returns a CRS, not a str.
- A Windows-crashing bug in the _warp module has been fixed (#1356).

1.0b1 (2018-05-25)
------------------

Breaking changes:

- The signatures of all Dataset constructors have changed: these method now